--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=0f1ba94b74682b17a30f1720918b4a15
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/testProject?serverVersion=mariadb-10.4.17"
 ###< doctrine/doctrine-bundle ###
